--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postcss": "^8.4.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
