--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "dotenv": "^16.4.5",
     "file-loader": "^6.2.0",
     "react-scripts": "^5.0.1",
     "webpack": "^5.90.3",
