--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.18",
+    "axios": "^1.6.8",
     "firebase": "^10.6.0",
     "postcss": "^8.4.37",
     "react": "^18.2.0",
