--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.4.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fetch-hook": "^1.9.5",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1",
