--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "firebase": "^10.6.0",
     "postcss": "^8.4.37",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.1",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "^3.4.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
