--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "private": true,
   "dependencies": {
     "@firebase/storage": "^0.11.2",
+    "@mui/x-data-grid": "^7.2.0",
+    "@mui/x-date-pickers": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "dayjs": "^1.11.10",
     "firebase": "^10.6.0",
     "postcss": "^8.4.37",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
+    "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
