--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@firebase/storage": "^0.11.2",
+    "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.2.0",
     "@mui/x-date-pickers": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,9 +15,11 @@
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.6.0",
     "postcss": "^8.4.37",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.8.0",
@@ -53,14 +58,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "dotenv": "^16.4.5",
-    "file-loader": "^6.2.0",
-    "react-scripts": "^5.0.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4"
+    "react-scripts": "^5.0.1"
   }
 }
